--- a/面试记录.md
+++ b/面试记录.md
@@ -383,3 +383,30 @@ http与https区别是什么
 哪些涉及到操作系统的知识呢
 
 AI大模型
+
+
+
+# 8.5 最右一面
+
+你是如何理解Android handler机制的
+
+在使用handler的时候会使用到message，这个message你是如何去构造的
+
+obtainmessage每次都会复用吗
+
+在Android中跟这种复用类似的有哪些 答了recyclerview说不太一样
+
+你是如何理解view的绘制流程的
+
+这些步骤中都涉及到viewtree的遍历，是深度优先遍历还是广度优先遍历，为什么呢
+
+Android的事件分发机制是什么样的
+
+实习过程中有遇到过映像深刻的bug吗
+
+jetpack你都用过什么样的东西
+
+你是怎么理解协程的
+
+kotlin协变和逆变
+
